Add:se agrega un h1 de prueba

--- a/cv.html
+++ b/cv.html
@@ -15,6 +15,7 @@
     <title>Curriculum</title>
   </head>
   <body>
+    <h1>test</h1>
     <div class="seccion1">
       <h1 class="titulo">Curriculum Vitae</h1>
       <div class="fotocv">
